--- a/.golangci.yml
+++ b/.golangci.yml
@@ -53,6 +53,7 @@ linters-settings:
 issues:
   exclude: 
     - "var-naming: don't use an underscore in package name"
+    - "G115: integer overflow conversion"
   exclude-rules:
     - path: '(.*)_test\.go'
       linters:
